# MinePP

./: .gitignore  CMakeLists.txt  Doxyfile  MinePP.db  README.md  auth.db
Assets/Textures/Config/: textures.json
Source/: CMakeLists.txt  Main.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Core/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
Source/Engine/Input/: InputManager.cpp  InputManager.hpp
Source/Engine/Rendering/: Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp  TextureAtlas.cpp  TextureAtlas.hpp
Source/Engine/ResourceManager/: AtlasGenerator.cpp  AtlasGenerator.hpp
Source/Game/: CMakeLists.txt  GameManager.cpp  GameManager.hpp
Source/Game/Entities/: Character.cpp  Character.hpp  CharacterController.cpp  CharacterController.hpp  Mob.cpp  Mob.hpp
Source/Game/Items/: Item.cpp  Item.hpp
Source/Game/Items/Tools/: Pickaxe.cpp  Pickaxe.hpp
Source/Game/Networking/: INetworkManager.hpp  NetworkManager.cpp  NetworkManager.hpp
Source/Game/UI/: HUD.cpp  HUD.hpp  IUIElement.hpp  UIElement.cpp  UIElement.hpp
Source/Game/World/: Biome.cpp  Biome.hpp  BlockType.hpp  Chunk.cpp  Chunk.hpp  WorldGenerator.cpp  WorldGenerator.hpp
asset/: AssetLoader.cpp  AssetLoader.hpp
asset/config/: config.json
asset/texture/: TextureAnimation.cpp  TextureAnimation.hpp  TextureManager.cpp  TextureManager.hpp  TextureModule.cpp  TextureModule.hpp
assets/shaders/: colored_cube_opaque.frag  colored_cube_opaque.vert  gamma_correction.frag  identity.frag  identity.vert  outline.vert  particle_instanced.frag  particle_instanced.vert  skybox.vert  vignette_effect.frag  world_opaque.frag  world_opaque.vert  world_transparent.frag  world_transparent.vert
assets/textures/: atlas.dds  textures.json
shaders/: foliage.frag  opaque.frag  opaque.vert  postprocess.frag  postprocess.vert
src/: Application.cpp  Application.hpp  Common.hpp  MinePP.cpp  MinePP.hpp  main.c  main.cpp
src/Application/: Application.cpp  Application.hpp  Gui.cpp  Gui.hpp  Window.cpp  Window.hpp
src/AssetManager/: AssetManager.cpp  AssetManager.hpp  AssetRegistries.hpp  AssetRegistry.hpp  CubeMapRegistry.hpp  ImageRegistry.hpp  ShaderProgramRegistry.hpp  ShaderRegistry.hpp  TextRegistry.hpp  TextureArrayRegistry.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TextureRegistry.hpp
src/Core/: Assets.cpp  Assets.hpp  Context.cpp  Context.hpp  PerformanceMonitor.hpp
src/Game/: Behaviors.cpp  Behaviors.hpp  Effects.cpp  Effects.hpp
src/Math/: AABB.hpp  AxisPlane.cpp  AxisPlane.hpp  Math.cpp  Math.hpp  Math.inl  WorldRayCast.cpp  WorldRayCast.hpp
src/Performance/: Trace.cpp  Trace.hpp
src/Persistence/: Persistence.cpp  Persistence.hpp
src/Physics/: MovementSimulation.cpp  MovementSimulation.hpp
src/Rendering/: BlockMesh.cpp  BlockMesh.hpp  BlockVertex.cpp  BlockVertex.hpp  Buffer.hpp  Buffers.hpp  ColorRenderPass.cpp  ColorRenderPass.hpp  FrameBuffer.hpp  Framebuffer.cpp  FramebufferStack.cpp  FramebufferStack.hpp  Framebuffers.cpp  Framebuffers.hpp  FullscreenQuad.cpp  FullscreenQuad.hpp  Image.cpp  Image.hpp  InstancedParticleRenderer.cpp  InstancedParticleRenderer.hpp  Mesh.cpp  Mesh.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ProceduralShader.cpp  ProceduralShader.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Shaders.cpp  Shaders.hpp  SimpleCubeMesh.cpp  SimpleCubeMesh.hpp  Texture.cpp  Texture.hpp  Textures.cpp  Textures.hpp  VertexArray.cpp  VertexArray.hpp
src/Scene/: BlockOutline.cpp  BlockOutline.hpp  Camera.cpp  Camera.hpp  CubeMesh.cpp  CubeMesh.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  Skybox.hpp
src/Scene/Behaviors/: BlockBreakParticleBehavior.cpp  BlockBreakParticleBehavior.hpp  LavaParticleBehavior.cpp  LavaParticleBehavior.hpp  ParticleBehaviors.cpp  ParticleBehaviors.hpp  WorldBehavior.hpp
src/Scene/Effects/: ChromaticAberrationEffect.hpp  CrosshairEffect.hpp  GammaCorrectionEffect.hpp  GaussianBlurEffect.hpp  InvertEffect.hpp  PostProcessEffect.cpp  PostProcessEffect.hpp  PostProcessEffects.hpp  VignetteEffect.hpp
src/Util/: Random.cpp  Random.hpp  Util.cpp  Util.hpp
src/Utils/: ThreadPool.cpp  ThreadPool.hpp  Utils.cpp  Utils.hpp
src/World/: BlockData.hpp  BlockName.cpp  BlockName.hpp  BlockTypes.hpp  Chunk.cpp  Chunk.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  ChunkMeshTask.hpp  ChunkMeshTaskManager.cpp  ChunkMeshTaskManager.hpp  ChunkRegion.cpp  ChunkRegion.hpp  LODLevel.hpp  World.cpp  World.hpp  WorldConstants.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/auth/: Auth.cpp  Auth.hpp
src/blockmodel/: BlockModel.hpp  BlockModelParser.cpp  BlockModelParser.hpp
src/camera/: Camera.cpp  Camera.hpp
src/command/: CommandManager.cpp  CommandManager.hpp
src/config/: Config.cpp  Config.hpp  IConfig.hpp
src/database/: Database.cpp  Database.hpp  DatabaseManager.cpp  DatabaseManager.hpp
src/engine/camera/: Camera.cpp  Camera.hpp
src/engine/input/: InputManager.cpp  InputManager.hpp
src/engine/physics/: Physics.cpp  Physics.hpp
src/input/: InputManager.cpp  InputManager.hpp
src/network/: Client.cpp  Client.hpp  NetworkManager.cpp  NetworkManager.hpp
src/noise/: Noise.cpp  Noise.hpp
src/player/: PlayerManager.cpp  PlayerManager.hpp
src/render/: RenderManager.cpp  RenderManager.hpp
src/renderer/: PostProcessor.cpp  PostProcessor.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/ressource/: ResourceManager.cpp  ResourceManager.hpp
src/texture/: TextureManager.cpp  TextureManager.hpp
src/ui/: ChatWindow.cpp  ChatWindow.hpp  DebugOverlay.cpp  DebugOverlay.hpp
src/utils/: Matrix.cpp  Matrix.hpp  Ring.cpp  Ring.hpp  Sign.cpp  Sign.hpp  Utils.cpp  Utils.hpp
src/window/: WindowManager.cpp  WindowManager.hpp
src/worker/: WorkerManager.cpp  WorkerManager.hpp
src/world/: Block.hpp  Chunk.cpp  Chunk.hpp  ChunkConstants.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkSection.cpp  ChunkSection.hpp  Cube.cpp  Cube.hpp  Item.cpp  Item.hpp  LightEngine.cpp  LightEngine.hpp  Map.cpp  Map.hpp  Noise.cpp  Noise.hpp  World.cpp  World.hpp  WorldManager.cpp  WorldManager.hpp
(+15 files in other folders)
